--- a/.github/workflows/check_version.yml
+++ b/.github/workflows/check_version.yml
@@ -9,34 +9,34 @@ jobs:
   check_version:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: Set up Flutter
-      uses: subosito/flutter-action@v2
-      with:
-        channel: 'stable'
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          channel: "stable"
 
-    - name: Check version changes
-      id: check_version
-      run: |
-        VERSION=$(grep 'version:' pubspec.yaml | cut -d ' ' -f 2)
-        echo "Current version: $VERSION"
-        git fetch --prune --unshallow --tags
-        LATEST_TAG=$(git describe --tags --abbrev=0)
-        echo "Latest tag: $LATEST_TAG"
-        if [ "v$VERSION" != "$LATEST_TAG" ]; then
-          echo "::set-output name=version_changed::true"
-          echo "::set-output name=new_version::v$VERSION"
-        else
-          echo "::set-output name=version_changed::false"
-        fi
-      shell: bash
+      - name: Check version changes
+        id: check_version
+        run: |
+          VERSION=$(grep 'version:' pubspec.yaml | cut -d ' ' -f 2)
+          echo "Current version: $VERSION"
+          git fetch --prune --unshallow --tags
+          LATEST_TAG=$(git describe --tags --abbrev=0)
+          echo "Latest tag: $LATEST_TAG"
+          if [ "v$VERSION" != "$LATEST_TAG" ]; then
+            echo "::set-output name=version_changed::true"
+            echo "::set-output name=new_version::v$VERSION"
+          else
+            echo "::set-output name=version_changed::false"
+          fi
+        shell: bash
 
-    - name: Create tag if version changed
-      if: steps.check_version.outputs.version_changed == 'true'
-      run: |
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
-        git tag ${{ steps.check_version.outputs.new_version }}
-        git push origin ${{ steps.check_version.outputs.new_version }}
+      - name: Create tag if version changed
+        if: steps.check_version.outputs.version_changed == 'true'
+        run: |
+          git config --local user.email "dwlee@quantit.io"
+          git config --local user.name "Qunatit QUI Master"
+          git tag ${{ steps.check_version.outputs.new_version }}
+          git push --tags
